Swagger feature (#4)
* Add new version of the api

* new swagger file

* Update swagger documentation
